--- a/src/components/shared/footer/Footer.html
+++ b/src/components/shared/footer/Footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
     <div class="center">
-        <p>Copyright &copy; - Carlos Mur</p>
+        <p><i>Copyright &copy; - Carlos Mur</i></p>
     </div>
 </footer>
