--- a/src/components/shared/sidebar/Sidebar.html
+++ b/src/components/shared/sidebar/Sidebar.html
@@ -1,7 +1,7 @@
 <aside id="sidebar">
     <div id="nav-blog" class="sidebar-item">
         <h3>Puedes hacer esto</h3>
-        <router-link to="/crear-articulo" class="btn btn-success">Crear Articulo</router-link>
+        <router-link to="/crear" class="btn btn-success">Crear Articulo</router-link>
     </div>
     <div id="search-blog" class="sidebar-item">
         <h3>Buscador</h3>
