--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -396,9 +396,9 @@ body {
   }
   
   .article-item.detail .image-wrap {
-    float: none;
-    width: 100%;
-    height: 300px;
+    float: left;
+    width: 50%;
+    height: auto;
     box-shadow: 0px 0px 5px #ccc;
   }
   
