--- a/src/components/acciones/crear/Crear.html
+++ b/src/components/acciones/crear/Crear.html
@@ -5,22 +5,25 @@
           <form class="middle-form" @submit.prevent="guardarArticulo"> 
               <div class="form-group">
                   <label for="titulo">Titulo</label>
-                  <input type="text" name="titulo" v-model="articulo.titulo" required />
-                  <div v-if="submitted && !$v.articulo.titulo.required">Campo obligatorio.</div>
+                  <input type="text" name="titulo" v-model="articulo.titulo" />
               </div>
 
               <div class="form-group">
                   <label for="contenido">Contenido</label>
-                  <textarea name="contenido" v-model="articulo.contenido" required></textarea>
-                  <div v-if="submitted && !$v.articulo.titulo.required">Campo obligatorio.</div>
+                  <textarea name="contenido" v-model="articulo.contenido"></textarea>
               </div>
 
               <!--Limpiar los float -->
               <div class="clearfix"></div>
-
-              <input type="submit" value="Guardar" class="btn btn-success" />
+              <button type="submit" title="Desconectar" class="btn-guardar">
+                <font-awesome-icon icon="check"/>
+              </button>
           </form>
       </section>
     </div>
-    <SidebarComponent></SidebarComponent>
+    <form class="middle-form" @submit.prevent="logOut">
+        <button type="submit" title="Desconectar" class="btn-logout">
+            <font-awesome-icon icon="sign-out-alt"/>
+        </button>
+    </form>
 </div>
