--- a/src/components/shared/header/Header.html
+++ b/src/components/shared/header/Header.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><router-link to="/home" active-class="active">Inicio</router-link></li>
                 <li><router-link to="/blog" active-class="active">Blog</router-link></li>
-                <li><router-link to="/formulario" active-class="active">Formulario</router-link></li>
+                <li><router-link to="/login" active-class="active">Login</router-link></li>
             </ul>
         </nav>
         <!-- Limpiar los float -->
