--- a/src/components/acciones/crear/Crear.html
+++ b/src/components/acciones/crear/Crear.html
@@ -15,14 +15,14 @@
 
               <!--Limpiar los float -->
               <div class="clearfix"></div>
-              <button type="submit" title="Desconectar" class="btn-guardar">
+              <button type="submit" title="Desconectar" class="btn-verde">
                 <font-awesome-icon icon="check"/>
               </button>
           </form>
       </section>
     </div>
     <form class="middle-form" @submit.prevent="logOut">
-        <button type="submit" title="Desconectar" class="btn-logout">
+        <button type="submit" title="Desconectar" class="btn-rojo">
             <font-awesome-icon icon="sign-out-alt"/>
         </button>
     </form>
