--- a/src/components/login/Login.html
+++ b/src/components/login/Login.html
@@ -17,7 +17,7 @@
                 </div>
                 <!-- Limpiar los float -->
                 <div class="clearfix"></div>
-                <input type="submit" value="Conectar" class="btn btn-form">
+                <input type="submit" value="Conectar" class="btn-verde">
             </form>
         </section>
     </div>
