--- a/src/components/shared/sidebar/Sidebar.html
+++ b/src/components/shared/sidebar/Sidebar.html
@@ -1,14 +1,9 @@
 <aside id="sidebar">
-    <div id="nav-blog" class="sidebar-item">
-        <h3>Puedes hacer esto</h3>
-        <router-link to="/crear" class="btn btn-success">Crear Articulo</router-link>
-    </div>
     <div id="search-blog" class="sidebar-item">
-        <h3>Buscador</h3>
-        <p>Encuentra el articulo que buscas</p>
+        <p><i>Encuentra el articulo que buscas</i></p>
         <form @submit.prevent="buscarArticulos">
             <input type="text" nombre="search" v-model="stringBusqueda">
-            <input class="btn btn-success" type="submit" nombre="enviar" value="Buscar">
+            <input class="btn-buscador" type="submit" nombre="enviar" value="Buscar">
         </form>
     </div>
 </aside>
