--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -138,30 +138,6 @@ body {
     text-align: center;
   }
   
-  .btn-white {
-    color: #444;
-    display: block;
-    background: white;
-    padding: 10px;
-    width: 100px;
-    height: 35px;
-    margin: 0px auto;
-    font-size: 18px;
-    text-transform: uppercase;
-    text-shadow: none;
-    text-decoration: none;
-    line-height: 35px;
-    box-shadow: 0px 0px 5px #ccc;
-    margin-top: 40px !important;
-    border-radius: 4px;
-  }
-  
-  .btn-white:hover {
-    background-color: #444;
-    color: white;
-    transition: 300ms all;
-  }
-  
   #slider.slider-small {
     height: 150px;
   }
@@ -212,71 +188,7 @@ body {
     margin-top: 10px;
   }
   
-  .btn {
-    display: block;
-    background: black;
-    color: white;
-    padding: 15px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 14px;
-    text-decoration: none;
-    border-radius: 4px;
-    max-width: 120px;
-    transition: 300ms all;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .btn-success {
-    background: green;
-    color: white !important;
-  }
-  
-  .btn-success:hover {
-    background: white;
-    color: green !important;
-    border: 1px solid green;
-  }
-  
-  .btn-danger{
-    background: red;
-    color: white !important;
-    float: left;
-    width: 25%;
-  }
-  
-  .btn-danger:hover{
-    background: white;
-    color: black !important;
-    border: 1px solid red;
-  }
-  
-  .btn-warning{
-    background: yellow;
-    color: black !important;
-    float: right;
-    width: 25%;
-  }
-  
-  .btn-warning:hover{
-    background: white;
-    color: black !important;
-    border: 1px solid yellow;
-  }
-  
-  .btn-form {
-    background: #444;
-    color: white;
-  }
-  
-  .btn-form:hover {
-    background: white;
-    color: #444;
-    border: 1px solid #444;
-  }
-
-  .btn-logout {
+  .btn-rojo {
     background: white;
     color: red;
     border: 1px solid red;
@@ -286,15 +198,15 @@ body {
     margin: 10px;
   }
   
-  .btn-logout:hover {
+  .btn-rojo:hover {
     background: red;
     color: white;
     border: 1px solid white;
   }
   
-  .btn-guardar {
+  .btn-verde {
     background: white;
-    color: green;
+    color: green !important;
     border: 1px solid green;
     width: 75px;
     height: 32px;
@@ -302,11 +214,58 @@ body {
     margin: 10px;
   }
   
-  .btn-guardar:hover {
+  .btn-verde:hover {
     background: green;
-    color: white;
+    color: white !important;
     border: 1px solid white;
+    text-decoration: none !important;
   }
+
+  .btn-blog {
+    color: green;
+    display: block;
+    background: white;
+    padding: 10px;
+    width: 100px;
+    height: 35px;
+    margin: 0px auto;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-shadow: none;
+    text-decoration: none;
+    line-height: 35px;
+    box-shadow: 0px 0px 5px #ccc;
+    margin-top: 40px !important;
+    border-radius: 4px;
+  }
+  
+  .btn-blog:hover {
+    background-color: lightgray;
+    color: green;
+    transition: 300ms all;
+  }
+
+  .btn-buscador {
+    color: green;
+    background: white;
+    padding: 10px;
+    width: 100px;
+    height: 35px;
+    font-size: 14px;
+    text-transform: uppercase;
+    text-shadow: none;
+    text-decoration: none;
+    box-shadow: 0px 0px 5px #ccc;
+    margin: 20px;
+    line-height: 15px;
+    border-radius: 4px;
+  }
+  
+  .btn-buscador:hover {
+    background-color: lightgray;
+    color: green;
+    transition: 300ms all;
+  }  
 
   .middle-form {
     width: 50%;
