--- a/src/components/articulo/Articulo.html
+++ b/src/components/articulo/Articulo.html
@@ -1,4 +1,3 @@
-<div class="general">
     <div class="center">
       <section id="content">
           <article class="article-item detail" v-if="articulo">
@@ -8,18 +7,14 @@
               <div class="image-wrap" v-if="!articulo.imagen" >
                 <img src="../../assets/images/noimage.png" :alt="articulo.titulo" :title="articulo.titulo"  />
             </div>              
-              <p class="right">
-                <router-link :to="'/home'" class="btn btn-success">Volver</router-link>
-             </p>
-              <h1 class="sub-header">{{articulo.titulo}}</h1>
-              <span class="date">{{articulo.fecha | moment("from", "now")}}</span>
-              <p>{{articulo.contenido}}</p>
-              <router-link :to="'/editar/' + articuloId" class="btn btn-warning">Editar</router-link>           
-              <a @click="eliminarArticulo()" class="btn btn-danger">Eliminar</a>   
-              <!-- Limpiar los float -->
-              <div class="clearfix"></div>
+            <router-link :to="'/home'" type="button" class="btn-verde right">
+                <span class="textoVolver">Volver</span>
+            </router-link>
+            <h1 class="sub-header">{{articulo.titulo}}</h1>
+            <span class="date">{{articulo.fecha | moment("from", "now")}}</span>
+            <p>{{articulo.contenido}}</p>
+            <!-- Limpiar los float -->
+            <div class="clearfix"></div>
           </article> 
       </section>
     </div>
-    <SidebarComponent></SidebarComponent>
-</div>
